// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/table/TableRow should match snapshot 1`] = `
<div>
  <div
    class="TableRow octo-table-row"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable undefined"
          placeholder="Untitled"
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button  "
          type="button"
        >
          Open
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/table/TableRow should match snapshot, collapsed tree 1`] = `
<div>
  <div
    class="TableRow octo-table-row hidden"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable undefined"
          placeholder="Untitled"
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button  "
          type="button"
        >
          Open
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/table/TableRow should match snapshot, display properties 1`] = `
<div>
  <div
    class="TableRow octo-table-row hidden"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable undefined"
          placeholder="Untitled"
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button  "
          type="button"
        >
          Open
        </button>
      </div>
    </div>
    <div
      class="octo-table-cell"
      style="width: 100px;"
    >
      <div
        class="octo-propertyvalue"
        tabindex="0"
      >
        <span
          class="Label color1 "
        >
          value 1
        </span>
      </div>
    </div>
    <div
      class="octo-table-cell"
      style="width: 100px;"
    >
      <div
        class="octo-propertyvalue"
        tabindex="0"
      >
        <span
          class="Label empty "
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/table/TableRow should match snapshot, isSelected 1`] = `
<div>
  <div
    class="TableRow octo-table-row selected"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable undefined"
          placeholder="Untitled"
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button  "
          type="button"
        >
          Open
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/table/TableRow should match snapshot, read-only 1`] = `
<div>
  <div
    class="TableRow octo-table-row"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable readonly undefined"
          placeholder="Untitled"
          readonly=""
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button  "
          type="button"
        >
          Open
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/table/TableRow should match snapshot, resizing column 1`] = `
<div>
  <div
    class="TableRow octo-table-row hidden"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable undefined"
          placeholder="Untitled"
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button  "
          type="button"
        >
          Open
        </button>
      </div>
    </div>
    <div
      class="octo-table-cell"
      style="width: 100px;"
    >
      <div
        class="octo-propertyvalue"
        tabindex="0"
      >
        <span
          class="Label color1 "
        >
          value 1
        </span>
      </div>
    </div>
    <div
      class="octo-table-cell"
      style="width: 100px;"
    >
      <div
        class="octo-propertyvalue"
        tabindex="0"
      >
        <span
          class="Label empty "
        />
      </div>
    </div>
  </div>
</div>
`;
